added some possible recipe datasets that we can use

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -34,11 +34,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'instructions': 'Toss ingredients lightly and spoon into a buttered baking dish. Top with additional crushed cracker crumbs, and brush with melted butter. Bake in a preheated at 350 degrees oven for 25 to 30 minutes or until delicately browned.', 'ingredients': ['1/2 cup celery, finely chopped', '1 small green pepper finely chopped', '1/2 cup finely sliced green onions', '1/4 cup chopped parsley', '1 pound crabmeat', '1 1/4 cups coarsely crushed cracker crumbs', '1/2 teaspoon salt', '3/4 teaspoons dry mustard', 'Dash hot sauce', '1/4 cup heavy cream', '1/2 cup melted butter'], 'title': \"Grammie Hamblet's Deviled Crab\", 'picture_link': None}\n",
+      "Toss ingredients lightly and spoon into a buttered baking dish. Top with additional crushed cracker crumbs, and brush with melted butter. Bake in a preheated at 350 degrees oven for 25 to 30 minutes or until delicately browned.\n"
+     ]
+    }
+   ],
    "source": [
-    "pass"
+    "import json\n",
+    "#https://eightportions.com/datasets/Recipes/#fn:1 where the data is from\n",
+    "#scraped from \n",
+    "#Foodnetwork.com, Epicurious.com, Allrecipes.com by someone\n",
+    "\n",
+    "allr = open('recipes_raw_nosource_ar.json')\n",
+    "epi = open('recipes_raw_nosource_epi.json')\n",
+    "food = open('recipes_raw_nosource_fn.json')\n",
+    "\n",
+    "data1 = json.load(allr) #data 1 has a lot of the word ADVERTISEMENT\n",
+    "data2 = json.load(epi) #data 2 looks good\n",
+    "data3 = json.load(food) #this too\n",
+    "\n",
+    "#this load module loads the data into a dictionary \n",
+    "\n",
+    "#for key, value in data3.items():\n",
+    "#   print(key,value)\n",
+    "#example of a specific recipe with a certain key and the value is also a dictionary\n",
+    "print(data3[\"p3pKOD6jIHEcjf20CCXohP8uqkG5dGi\"])\n",
+    "\n",
+    "#example of only instructions\n",
+    "print(data3[\"p3pKOD6jIHEcjf20CCXohP8uqkG5dGi\"]['instructions'])"
    ]
   },
   {
@@ -267,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
