Adding some more recipes

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
       " pesto \n",
       " \n",
       " Instructions: \n",
-      " Preheat oven to 350 degrees F (175 degrees C). Grease a 9x13 inch baking dish. In a large bowl, combine all ingredients except salt, pepper, garlic, onion and 1/2 teaspoon oregano. Mix well and season with salt. Bake in the preheated oven until cheese melts and cheese is golden, about 30 minutes. Cool. Preheat oven to 350 degrees F (175 degrees C). Grease a 9x13 inch baking dish. In a large bowl, combine all ingredients except salt, pepper, garlic, onion and 1/2 teaspoon oregano. Mix well and season with salt. Bake in the preheated oven until cheese melts and cheese is golden, about 30 minutes. Cool. <|endoftext|>\n"
+      " Prepare the oven for oven. Preheat the oven to 350°F. Place the tomatoes in the oven. Bake in the preheated oven for at least 2 to 3 minutes, then in the oven a little more. Let the tomatoes set aside, and place in a large heavy baking dish or skillet. Mix the tomatoes and salt together in a bowl. Spread evenly onto the prepared baking dish. Arrange the tomatoes, tortilla chips, and cheese in a saucepan. Arrange the cheese among the remaining ingredients; place it on each side and spread evenly over the cheese, covering it with a rubber spatula. Bake for 10 minutes. <|endoftext|>\n"
      ]
     }
    ],
