--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -33,6 +33,7 @@
     "import random\n",
     "import json\n",
     "import pandas as pd\n",
+    "import csv\n",
     "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM"
    ]
@@ -989,7 +990,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1003,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
